--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@eslint/js": "^9.15.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.28.1",
     "eslint": "^9.15.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
@@ -23,6 +25,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^5.0.1"
+    "drizzle-orm": "^0.36.4",
+    "express": "^5.0.1",
+    "pg": "^8.13.1"
   }
 }
