--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "tsx watch src/index.ts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "update": "npm update --save"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +17,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "prisma": "^6.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.15.0"
+    "typescript-eslint": "^8.16.0"
   },
   "dependencies": {
     "@prisma/client": "^6.0.0",
