--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eslint/js": "^9.15.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
     "eslint": "^9.16.0",
     "prisma": "^6.0.0",
@@ -27,6 +28,7 @@
     "@prisma/client": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^5.0.1"
+    "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
